[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "python-template"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
pycoingecko = "^2.2.0"
[tool.poetry.dev-dependencies]
